Add map and flatMap - Stream API